--- a/index.ipynb
+++ b/index.ipynb
@@ -163,7 +163,7 @@
    ],
    "source": [
     "name = \"art vandelay\" # 'Art Vandelay'\n",
-    "name.title(art vandelay)"
+    "title(art vandelay)"
    ]
   },
   {
