--- a/index.ipynb
+++ b/index.ipynb
@@ -149,21 +149,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-1ae6bb762c6c>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-7-2050ac73f76e>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-1ae6bb762c6c>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    name.title(art vandelay)\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-2050ac73f76e>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    title(art vandelay)\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "name = \"art vandelay\" # 'Art Vandelay'\n",
-    "title(art vandelay)"
+    "title(art vandelay"
    ]
   },
   {
