--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
    ],
    "source": [
     "\"art vandelay\" # Art Vandelay\n",
-    "\"art vandeay\".title"
+    "\"art vandeay\"title"
    ]
   },
   {
