--- a/index.ipynb
+++ b/index.ipynb
@@ -149,12 +149,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "\"art vandelay\" # Art Vandelay\n",
-    "title = \"art vandeay\""
+    "title = \"art vandlay\""
    ]
   },
   {
