--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "\"art vandelay\" # Art Vandelay\n",
-    "title = \"art vandlay\""
+    "name = \"art vandlay\""
    ]
   },
   {
