--- a/index.ipynb
+++ b/index.ipynb
@@ -149,12 +149,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function str.title>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"art vandelay\" # Art Vandelay\n",
-    "name = \"art vandlay\""
+    "name = \"art vandlay\"\n",
+    "name.title"
    ]
   },
   {
