--- a/index.ipynb
+++ b/index.ipynb
@@ -163,8 +163,7 @@
    ],
    "source": [
     "\"art vandelay\" # Art Vandelay\n",
-    "name = \"art vandlay\"\n",
-    "name.title(art vandelay)"
+    "\"art van\""
    ]
   },
   {
